--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.10",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.19"
+  },
+  "dependencies": {
+    "ethers": "^6.13.5"
   }
 }
